update candlesticks style

--- a/smartData/frontEnd/templates/index.html
+++ b/smartData/frontEnd/templates/index.html
@@ -372,8 +372,10 @@
 							<ul class="navigation navigation-main navigation-accordion">
 
 								<!-- Main -->
-								<li class="navigation-header"><span>Main</span> <i class="icon-menu" title="Main pages"></i></li>
-								<li><a href="index.html"><i class="icon-home4"></i> <span>Dashboard</span></a></li>
+								<li><a href="static/index.html"><i class="icon-home4"></i> <span>主页</span></a></li>
+								<li class="navigation-header"><span>个股分析</span> <i class="icon-menu" title="个股分析"></i></li>
+								<li><a href="segments.html"><i class="icon-stack2"></i> <span>板块</span></a></li>
+
 								<li>
 									<a href="#"><i class="icon-stack2"></i> <span>Page layouts</span></a>
 									<ul>
@@ -1024,7 +1026,7 @@
 									<!-- /Stock Search  -->
 
 									<!-- Candlestick charts -->
-									<div class="row">
+									<div class="row" id="main_echart_container">
 										<div class="col-lg-12">
 
 											<!-- Candlestick with line -->
